# CoMa

./: CMakeLists.txt  LinearEquations.h  Matrix.h  MatrixOperations.h  NonlinearEquations.h  README.md  SystemOfEquations.h  bisection.cpp  bisection.h  library.h  main.cpp  newton.h  util.h
include/: BackwardEuler.hpp  FowardEuler.hpp  NonlinearEquations.h  NonlinearEquations.hpp  ODEProblem.hpp  ODESolution.hpp  ODESolverImpl.hpp  SystemOfEquations.h
src/DiffEq/: ODEProblem.cpp  ODEProblem.h
src/NonlinearEq/: NonlinearEquations.h
