cmake_minimum_required(VERSION 3.17)
project(CoMa)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS " -I/home/jon/CLionProjects/CoMa/src")
find_package(Catch2 REQUIRED)
find_package(Boost REQUIRED)
add_library(CoMa STATIC library.cpp library.h util.h include/NonlinearEquations.h include/SystemOfEquations.h deprecated/MatrixOperations.h deprecated/Matrix.h include/ODEProblem.hpp include/ODESolution.hpp include/ODESolverImpl.hpp include/FowardEuler.hpp include/BackwardEuler.hpp)
add_executable(tests main.cpp include/ODEProblem.hpp include/ODESolution.hpp include/BackwardEuler.hpp)
TARGET_LINK_LIBRARIES(tests CoMa Catch2::Catch2)
TARGET_LINK_LIBRARIES(tests CoMa Boost)
include(CTest)
include(Catch)
catch_discover_tests(tests)
